# cos40003-schedsim

./: CMakeLists.txt  LICENSE  README.markdown  sample.txt  test_file.txt
include/: Process.h  io.h
src/: fifo.cpp  io.cpp  lottery.cpp  main.cpp  mlfq.cpp  rr.cpp  sjf_np.cpp  sjf_p.cpp
